--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -1,37 +1,44 @@
-- @section = "community"
-- @subsection = ""
-- @page_title = "Git - Community"
+<% @section = "community" %>
+<% @subsection = "" %>
+<% @page_title = "Git - Community" %>
 
-- content_for :sidebar do
-  = render 'shared/book'
+<% content_for :sidebar do %>
+  <%= render 'shared/book' %>
+<% end %>
 
-%div#main
-  %h1 Community
+<div id="main">
+  <h1> Community</h2>
 
-  %h2 Mailing List
+  <h2> Mailing List</h2>
 
-  %p
-    Questions or comments for the Git community can be sent to the mailing list by using the email address <a href="mailto:git@vger.kernel.org">git@vger.kernel.org</a>. <strong>Bug reports should be sent to this mailing list.</strong> 
+  <p>
+    Questions or comments for the Git community can be sent to the mailing list by using the email address <a href="mailto:git@vger.kernel.org">git@vger.kernel.org</a>. <strong>Bug reports should be sent to this mailing list.</strong>
+  </p>
 
-  %p
+  <p>
     You do not need to subscribe: you will be Cc&apos;d in replies. Please keep the Cc list intact when replying (use &quot;Reply to all&quot;). Greylisting may delay your first post for a few hours.
-    
-  %p
-    The <a href="http://dir.gmane.org/gmane.comp.version-control.git">archive</a> can be found on Gmane.  Click <a href="mailto:majordomo@vger.kernel.org?body=subscribe git">here</a> to subscribe.  
+  </p>
 
-  %p
+  <p>
+    The <a href="http://dir.gmane.org/gmane.comp.version-control.git">archive</a> can be found on Gmane.  Click <a href="mailto:majordomo@vger.kernel.org?body=subscribe git">here</a> to subscribe.
+  <p>
+
+  <p>
     There is also <a href="https://groups.google.com/forum/?fromgroups#!forum/git-users">Git user mailing list</a> on Google Groups which is a nice place for beginners to ask about anything.
+  <p>
 
-  %h2 IRC Channel
+  <h2> IRC Channel </h2>
 
-  %p
+  <p>
     If the manpages and this book aren’t enough and you need in-person help, you can try the <span class="highlight fixed">#git</span> channel on the Freenode IRC server (<strong>irc.freenode.net</strong>). These channels are regularly filled with hundreds of people who are all very knowledgeable about Git and are often willing to help.
+  <p>
 
-  %p
+  <p>
     If you need specific help about one of the for-profit Git hosting sites, you might try their own IRC channels (such as <span class="highlight fixed">#github</span> or <span class="highlight fixed">#gitorious</span>) on the same IRC server.
+  <p>
 
-  %h2 Contributing to Git
+  <h2> Contributing to Git </h2>
 
-  %p
+  <p>
     The <a href="https://github.com/git/git/tree/master/Documentation">Documentation directory</a> in the Git source code has several files of interest to developers who are looking to help contribute. After reading the <a href="https://github.com/git/git/blob/master/Documentation/CodingGuidelines">coding guidelines</a>, you can learn <a href="https://github.com/git/git/blob/master/Documentation/SubmittingPatches">how to submit patches</a>. For those looking to get more deeply involved, there is a <a href="https://github.com/git/git/blob/master/Documentation/howto/maintain-git.txt">howto for Git maintainers</a>.
-
+  </p>
