--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,11 @@
-%header
+<header>
   <a href="/"><img src="/images/logo@2x.png" width="110" height="46" alt="Git" /></a>
-  %span#tagline
-    =raw random_tagline
+  <span id="tagline">
+    <%= raw random_tagline %>
+  </span>
 
-  %form#search{:action => '/search/results'}
+  <form id="search" action="/search/results">
     <input id="search-text" name="search" placeholder="Search entire site..." autocomplete="off" type="text" />
-
-  %div#search-results
+  </form>
+  <div id="search-results"></div>
+</header>
