--- a/app/views/shared/_related.html.erb
+++ b/app/views/shared/_related.html.erb
@@ -1,17 +1,46 @@
-<% if @related && @related.size > 0 %>
-  <h4>Related Material</h4>
-  <ul class="related-material">
-    <% @related.each do |rel| %>
-      <li class="<%= rel.content_type %>">
-      <strong><a href="<%= rel.content_url %>"><%= rel.name %></a></strong>
-      <% if rel.content_type == "reference" %>
-        in <a href="/docs">Reference</a>
-      <% elsif rel.content_type == "book" %>
-        in <a href="/book/en">Books</a>
-      <% elsif rel.content_type == "video" %>
-        in <a href="/videos">Videos</a>
-      <% end %>
-      </li>
-    <% end %>
-  </ul>
-<% end %>
+<h4> Related StackOverflow Questions</h4>
+
+<ul class="stackoverflow">
+</ul>
+  <li>
+    <%=link_to "About Git's merge and rebase" %>
+    <span>
+      <strong>5</strong> votes <em>/</em> <strong>3</strong> Answers
+    </span>
+  </li>
+  <li>
+    <%=link_to "git rebase vs git merge" %>
+    <span>
+      <strong>81</strong> votes <em>/</em> <strong>5</strong> Answers
+    </span>
+  </li>
+  <li>
+    <%=link_to "How to do a rebase with git gui?" %>
+    <span>
+      <strong>5</strong> votes <em>/</em> <strong>3</strong> Answers
+    </span>
+  </li>
+  <li>
+    <%=link_to "recovering from git rebase" %>
+    <span>
+      <strong>27</strong> votes <em>/</em> <strong>15</strong> Answers
+    </span>
+  </li>
+  <li>
+    <%=link_to "git pull VS git fetch git rebase" %>
+    <span>
+      <strong>15</strong> votes <em>/</em> <strong>3</strong> Answers
+    </span>
+  </li>
+  <li>
+    <%=link_to "Undoing a git rebase" %>
+    <span>
+      <strong>160</strong> votes <em>/</em> <strong>7</strong> Answers
+    </span>
+  </li>
+  <li>
+    <%=link_to "How to know if there is a git rebase in progress?" %>
+    <span>
+      <strong>16</strong> votes <em>/</em> <strong>7</strong> Answers
+    </span>
+  </li>
