Redirect download links away from Google Code
Google Code has shut off its download service. Git release tarballs are
now only on kernel.org and Git for Windows releases are on GitHub.

This fixes #384.

--- a/app/views/downloads/installers/index.html.haml
+++ b/app/views/downloads/installers/index.html.haml
@@ -26,7 +26,7 @@
             %td 
               %strong Windows
             %td 
-              =link_to "Stable", "http://code.google.com/p/msysgit/downloads/list"
+              =link_to "Stable", "https://github.com/msysgit/msysgit/releases"
               <span class="light">|</span>
               =link_to "Cygwin", "http://www.cygwin.com/setup.exe"
           %tr
@@ -43,7 +43,7 @@
               =link_to "v9-10", "http://opencsw.org/packages/git/"
 
       %p
-        <a href="http://code.google.com/p/git-core/downloads/list">Older releases</a> are available and the <a href="https://github.com/gitster/git">Git source repository</a> is on GitHub.
+        <a href="https://www.kernel.org/pub/software/scm/git/">Older releases</a> are available and the <a href="https://github.com/gitster/git">Git source repository</a> is on GitHub.
 
       %p
         Daily snapshots of the main Git development branch are available at <a href="http://codemonkey.org">codemonkey.org</a>.
