--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -40,7 +40,7 @@
     %table
       %tr
         %td{:nowrap => true}= link_to "Graphical UIs", "/downloads/guis", {:class => 'icon gui', :id => 'gui-link'}
-        %td{:nowrap => true}= link_to "Tarballs", "http://code.google.com/p/git-core/downloads/list", {:class => 'icon older-releases'}
+        %td{:nowrap => true}= link_to "Tarballs", "https://www.kernel.org/pub/software/scm/git/", {:class => 'icon older-releases'}
       %tr
         %td{:nowrap => true}= link_to "Windows Build", "/download/win", {:class => 'icon windows', :id => 'alt-link'}
         %td{:nowrap => true}= link_to "Source Code", "https://github.com/git/git", {:class => 'icon source'}
