--- a/app/views/about/_free_and_open_source.html.erb
+++ b/app/views/about/_free_and_open_source.html.erb
@@ -6,6 +6,12 @@
 	The Git project chose to use GPLv2 to guarantee your freedom to
 	share and change free software---to make sure the software is
 	free for all its users.</p>
+
+    <p>However, we do restrict the use of the term "Git" and the
+       <a href="/downloads/logos">logos</a> to avoid confusion. Please
+       see our <a href="/trademark">trademark</a> policy for
+       details.</p>
+
     <div class="bottom-nav" style="display: block;">
       <a href="#staging-area" class="previous" data-section-id="staging-area">← Staging Area</a>
     </div>
