--- a/app/views/doc/_translations.html.erb
+++ b/app/views/doc/_translations.html.erb
@@ -1,41 +1,41 @@
 <p>
 This book is translated into 
-  <a href="/book/de">German</a>,
-  <a href="/book/zh">中文</a>,
-  <a href="/book/zh-tw">Taiwanese Mandarin</a>,
-  <a href="/book/fr">French</a>,
-  <a href="/book/ja">Japanese</a>,
-  <a href="/book/nl">Dutch</a>,
-  <a href="/book/ru">Russian</a>,
-  <a href="/book/ko">Korean</a>,
-  <a href="/book/pt-br">Brazilian Portuguese</a> and
-  <a href="/book/cs">Czech</a>.
+  <a href="/book/de">Deutsch</a>,
+  <a href="/book/zh">简体中文</a>,
+  <a href="/book/zh-tw">正體中文</a>,
+  <a href="/book/fr">Français</a>,
+  <a href="/book/ja">日本語</a>,
+  <a href="/book/nl">Nederlands</a>,
+  <a href="/book/ru">Русский</a>,
+  <a href="/book/ko">한국어</a>,
+  <a href="/book/pt-br">Português (Brasil)</a> and
+  <a href="/book/cs">Čeština</a>.
 </p>
 <p>
 Partial translations available in
   <a href="/book/ar">Arabic</a>,
-  <a href="/book/es">Spanish</a>,
+  <a href="/book/es">Español</a>,
   <a href="/book/id">Indonesian</a>,
-  <a href="/book/it">Italian</a>,
-  <a href="/book/fi">Finnish</a>,
-  <a href="/book/mk">Macedonian</a>,
-  <a href="/book/pl">Polish</a> and
-  <a href="/book/tr">Turkish</a>.
+  <a href="/book/it">Italiano</a>,
+  <a href="/book/fi">Suomi</a>,
+  <a href="/book/mk">Македонски</a>,
+  <a href="/book/pl">Polski</a> and
+  <a href="/book/tr">Türkçe</a>.
 </p>
 <p>
 Translations started for
-  <a href="/book/az">Azerbaijani</a>,
-  <a href="/book/be">Belarusian</a>,
-  <a href="/book/ca">Catalan</a>,
-  <a href="/book/eo">Esperanto</a>.
-  <a href="/book/es-ni">Spanish (Nicaragua)</a>,
-  <a href="/book/hi">Hindi</a>,
-  <a href="/book/hu">Hungarian</a>,
+  <a href="/book/az">Azərbaycan dili</a>,
+  <a href="/book/be">Беларуская</a>,
+  <a href="/book/ca">Català</a>,
+  <a href="/book/eo">Esperanto</a>,
+  <a href="/book/es-ni">Español (Nicaragua)</a>,
+  <a href="/book/hi">हिन्दी</a>,
+  <a href="/book/hu">Magyar</a>,
   <a href="/book/no-nb">Norwegian Bokmål</a>,
-  <a href="/book/ro">Romanian</a>,
-  <a href="/book/sr">Serbian</a>,
-  <a href="/book/th">Thai</a> and
-  <a href="/book/vi">Vietnamese</a>.
+  <a href="/book/ro">Română</a>,
+  <a href="/book/sr">Српски</a>,
+  <a href="/book/th">ภาษาไทย</a> and
+  <a href="/book/vi">Tiếng Việt</a>.
 </p>
 <hr class="sidebar"/>
 <p>
